# src/controllers/auth/auth.schema.ts
@@ -18,6 +18,7 @@ export type RequstAuth =
   | {
       query?: {
         access_token?: string;
+        refresh_token?: string;
       };
     }
   | undefined;
