# src/controllers/auth/authService.ts
@@ -1,6 +1,11 @@
 import { RequstAuth } from "./auth.schema";
 import { User } from "./../../firebase/index";
-import { FirebaseSignUp, FirebaseSignIn, FirebaseMe } from "./auth.functions";
+import {
+  FirebaseSignUp,
+  FirebaseSignIn,
+  FirebaseMe,
+  FirebaseRefreshToken,
+} from "./auth.functions";
 
 export class AuthService {
   public async signup(email: string, password: string) {
@@ -11,15 +16,24 @@ export class AuthService {
     return await FirebaseSignIn(email, password);
   }
 
-  public async me(token: string) {
-    return await FirebaseMe(token);
+  public async me(accessToken: string, refreshToken: string) {
+    return await FirebaseMe(accessToken, refreshToken);
   }
 
-  public async isAuth(token: string, request: RequstAuth): Promise<User> {
+  public async refresh(refresh_token: string) {
+    return await FirebaseRefreshToken(refresh_token);
+  }
+
+  public async isAuth(
+    access_token: string,
+    refresh_token: string,
+    request: RequstAuth
+  ): Promise<User> {
     return new Promise(async (resolve, reject) => {
       try {
-        const access_token = token ?? request?.query?.access_token;
-        const user = await this.me(access_token);
+        const accessToken = access_token ?? request?.query?.access_token;
+        const refreshToken = refresh_token ?? request?.query?.refresh_token;
+        const user = await this.me(accessToken, refreshToken);
         if (user) {
           resolve(user);
         } else {
